# bookshelf_API

./: .env  README.MD  README.md  main.py  pyproject.toml
app/core/: config.py
app/db/: db_setup.py
env/Scripts/: activate  activate.bat
