[tool.poetry]
name = "bookshelf-api"
version = "0.1.0"
description = ""
authors = ["VLiubin"]
license = "MIT"
readme = "README.md"
packages = [{include = "bookshelf_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.94.0"}
sqlalchemy = "^2.0.5.post1"
alembic = "^1.10.2"
pydantic = "^1.10.6"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
